# situation_room

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  README.session15-old.md  SESSION10_FIXES_PATCH_2_README.md  SESSION10_FIXES_PATCH_3_README.md  SESSION10_FIXES_PATCH_README.md  SESSION10_PATCH_README.md  SESSION11_P25_README.md  SESSION12_P2_README.md  SESSION13_FOLLOWUP_README.md  SESSION13_README.md  SESSION16_P1B_README.md  SESSION19_HANDOFF.md  SESSION19_README.md  SESSION20_HANDOFF.md  SESSION20_README.md  SESSION21_HANDOFF.md  SESSION21_README.md  SESSION22_HANDOFF.md  SESSION22_README.md  SESSION23_1_README.md  SESSION23_HANDOFF.md  SESSION23_README.md  SESSION24_HANDOFF.md  SESSION3_FIXES2_PATCH.md  SESSION3_FIXES_PATCH.md  SESSION3_PART2_PATCH.md  SESSION3_PART3_PATCH.md  SESSION3_PATCH.md  SESSION3_PROMPT_FIX_PATCH.md  SESSION_39_APPLY.md  SESSION_40_APPLY.md  SESSION_41_PATCH_1.md  SESSION_41_PATCH_2.md  SESSION_42_PATCH_3.md  (+102 more)
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
api/src/: commands.rs  types_export.rs
apps/demo/: Cargo.toml
apps/demo/src/: main.rs
apps/desktop/: SESSION16_P1_README.md  SESSION18_README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.NOTES.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/eval_harness/: Cargo.toml
apps/eval_harness/src/: main.rs
apps/situation_room/: Cargo.toml
apps/situation_room/src/: main.rs
config/: sources.toml
config/detectors/: thresholds.toml
config/prompts/: decompose_research_query.md  document_assertions.md  document_entities.md  document_entity_attributes.md  document_events.md  document_observations.md  extract_assertions.md  propose_source_url.md  recipe_author.md  research_classifier.md  summarize_filing.md  tag_news.md
config/sources/: comtrade.toml  gdelt.toml  gfex.toml  lme.toml  rss_feeds.toml  sec_edgar.toml  usgs.toml
config/vocab/: authoritative_sources.toml  commodities.toml  event_types.toml
crates/analytics/: Cargo.toml
crates/analytics/src/: aggregates.rs  anomalies.rs  lib.rs  scoring.rs
crates/analytics/src/detectors/: capex_production.rs  concentration.rs  filing_language.rs  flow_rerouting.rs  guidance_dispersion.rs  inventory_divergence.rs  mod.rs  news_latency.rs
crates/api/: Cargo.toml
crates/api/src/: commands.rs  commands_records.rs  lib.rs  queries.rs  records_dto.rs  subscriptions.rs  types_export.rs
crates/apps_common/: Cargo.toml
crates/apps_common/src/: lib.rs  sources.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  vocab.rs
crates/core/src/schema/: content.rs  envelope.rs  geometry.rs  mod.rs
crates/core/src/schema/records/: assertion.rs  document.rs  entity.rs  event.rs  geometry.rs  mod.rs  observation.rs  relation.rs
crates/llm/: Cargo.toml
crates/llm/src/: cache.rs  cost_ledger.rs  extraction.rs  lib.rs  prompts.rs
crates/llm/src/providers/: anthropic.rs  gemini.rs  grok.rs  mod.rs  openai.rs  router.rs  trait_def.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: authoritative.rs  authoritative_live.rs  cull.rs  document_synth.rs  entity_synth.rs  extract.rs  fetch_backoff.rs  fetch_classes.rs  fetch_executor.rs  fetch_executor.rs.bak  http_fetcher.rs  index_page_detector.rs  ingest.rs  lib.rs  normalize.rs  promote.rs  propose_source_url.rs  recipe_apply.rs  recipe_author.rs  recipes.rs  recipes_store.rs  reextract.rs  relation_synth.rs  relation_vocab.rs  research.rs  research_classifier.rs  research_plans_store.rs  ua_policies.rs  url_pagination.rs
crates/pipeline/tests/fixtures/pdf/: README.md
crates/secure/: Cargo.toml
crates/secure/src/: bounds.rs  fs_guard.rs  headers.rs  http.rs  lib.rs  logging.rs  secrets.rs  url_guard.rs
crates/sources/: Cargo.toml
crates/sources/src/: lib.rs  registry.rs  scheduler.rs  traits.rs
crates/sources/src/adapters/: mod.rs
crates/sources/src/adapters/comtrade/: mod.rs
crates/sources/src/adapters/gdelt/: mod.rs
crates/sources/src/adapters/gfex/: mod.rs
crates/sources/src/adapters/lme/: mod.rs
crates/sources/src/adapters/rss/: mod.rs
crates/sources/src/adapters/sec_edgar/: mod.rs
crates/sources/src/adapters/usgs/: mod.rs  parse.rs
crates/storage/: Cargo.toml
crates/storage/src/: assertions.rs  authority_registry.rs  cache.rs  connection.rs  documents.rs  entities.rs  entity_refresh_log.rs  envelope_io.rs  events.rs  fetch_run_outcomes.rs  fetch_runs.rs  lib.rs  migrate.rs  observations.rs  orphan_cleanup.rs  promote_history.rs  queries.rs  query.rs  recipe_feedback.rs  recipe_fetch_attempts.rs  recipes.rs  record_dispatch.rs  relations.rs  research_plans.rs  sources_memory.rs
docs/adr/: 0001-monorepo-layout.md  0002-tauri-vs-leptos.md  0003-six-record-types.md  0004-assertion-promotion.md  0005-duckdb-storage.md  0006-design-language.md  0007-research-function.md  0008-offline-mode.md  0009-security-posture.md  0010-topic-based-subjects.md  0011-plan-lifecycle-and-fetch-executor.md  0012-reauthor-on-failure.md  (+11 more)
migrations/: 0001_init.sql  0002_indexes.sql  0003_recipes.sql  0004_research_plans.sql  0005_research_plan_status.sql  0006_fetch_runs.sql  0007_research_plans_rejection_and_lineage.sql  0009_recipe_feedback.sql  0010_recipes_authored_from.sql  0011_recipes_prior_recipe_id.sql  0012_recipes_reauthor_reason.sql  0013_recipe_fetch_attempts.sql  0014_recipe_fetch_attempts_content_type.sql  0015_recipes_iterator.sql  0016_fetch_run_outcomes.sql  0017_promote_history.sql  0018_provenance_selector_trace.sql  0019_authority_registry.sql  0020_parent_type_backfill_and_sn78_cleanup.sql  0021_sn97_orphan_cleanup.sql  0022_sn98_entity_rewire.sql  0023_sn100_entity_refresh_history.sql
scripts/: bootstrap.sh  check_tauri_commands_registered.sh  install-hooks.sh  make-delta.sh  rsync.sh  run_desktop.sh  run_dev.sh  seed_demo_data.sh  session65_diag.sql  session65_schema.sql  session65_verify.sql  session66_verify.sql
(+148 files in other folders)
