[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/sources",
    "crates/llm",
    "crates/pipeline",
    "crates/analytics",
    "crates/api",
    "crates/secure",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/yourusername/stockpile"
authors = ["Stockpile contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Logging — stockpile::secure::logging wraps this to scrub secrets
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP — rustls only, no system OpenSSL, strict TLS config applied via SecureHttpClient
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "stream"] }

# NOTE: duckdb added in Phase 2e. Bundled to avoid per-platform installs.
duckdb = { version = "1.1", features = ["bundled", "chrono", "uuid", "serde_json"] }

# JSON Schema generation
schemars = { version = "0.8", features = ["chrono"] }

# IDs
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }

# Async traits
async-trait = "0.1"

# Config loading
figment = { version = "0.10", features = ["toml", "env"] }

# TS type generation
ts-rs = { version = "9.0", features = ["chrono-impl", "uuid-impl"] }

# Secret handling — scrubs from logs, zeroizes on drop
secrecy = { version = "0.10" }
zeroize = { version = "1.8", features = ["derive"] }

# URL parsing (needed for SSRF defense)
url = { version = "2.5", features = ["serde"] }

# IP address parsing (SSRF defense: block private ranges)

# Constant-time equality for token comparisons
subtle = "2.6"

# Internal workspace crates
stockpile-core = { path = "crates/core" }
stockpile-storage = { path = "crates/storage" }
stockpile-sources = { path = "crates/sources" }
stockpile-llm = { path = "crates/llm" }
stockpile-pipeline = { path = "crates/pipeline" }
stockpile-analytics = { path = "crates/analytics" }
stockpile-api = { path = "crates/api" }
stockpile-secure = { path = "crates/secure" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
# Abort on panic in release to prevent data leaks through unwinding (no heap dumps with partial state)
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
