[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/llm",
    "crates/pipeline",
    "crates/api",
    "crates/secure",
    "apps/desktop/src-tauri",
    "apps/situation_room",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0-or-later"
repository = "https://github.com/yourusername/stockpile"
authors = ["Stockpile contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Logging — stockpile::secure::logging wraps this to scrub secrets
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP — rustls only, no system OpenSSL, strict TLS config applied via SecureHttpClient
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "stream"] }

# NOTE: duckdb added in Phase 2e. Bundled to avoid per-platform installs.
duckdb = { version = "1.1", features = ["bundled", "chrono", "uuid", "serde_json"] }

# JSON Schema generation
schemars = { version = "0.8", features = ["chrono"] }

# IDs
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }

# Async traits
async-trait = "0.1"

# Config loading
figment = { version = "0.10", features = ["toml", "env"] }

# TS type generation
ts-rs = { version = "9.0", features = ["chrono-impl", "uuid-impl"] }

# Tauri 2 — desktop shell. rustls-only via the runtime; no native-tls
# transitively (verified via cargo deny). The frontend invokes the
# commands declared in `crates/api`; capabilities are allow-listed in
# `apps/desktop/src-tauri/capabilities/`. See ADR 0002, ADR 0009.
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Secret handling — scrubs from logs, zeroizes on drop
secrecy = { version = "0.10" }
zeroize = { version = "1.8", features = ["derive"] }

# URL parsing (needed for SSRF defense)
url = { version = "2.5", features = ["serde"] }

# PDF text extraction — kept because the USGS adapter extracts text
# into Document.body. The text itself isn't parsed here; that's the
# Level-2 FetchRecipe apply runtime's job (ADR 0007).
pdf-extract = "0.7"

# CLI argument parsing (used by binaries that need it)
clap = { version = "4.5", features = ["derive"] }

# .env loading for binaries and test harnesses only — never pulled in
# by library code. See `docs/security/threat_model.md`: secrets live in
# env vars; .env is a dev convenience on top of that, not a new path.
dotenvy = "0.15"

# IP address parsing (SSRF defense: block private ranges)

# Constant-time equality for token comparisons
subtle = "2.6"

# Recipe-apply runtime extractors (ADR 0007 Level-2). Each serves one
# ExtractionSpec variant — the closed enum in `pipeline::recipes`.
regex = "1.10"
csv = "1.3"
scraper = "0.20"
# JSONPath extractor for the recipe-apply runtime. jsonpath-rust 1.0+
# is RFC 9535 compliant and actively maintained; chosen over
# serde_json_path (which has an upstream version-split bug in 0.6.x
# that breaks compilation on current rustc).
jsonpath-rust = "1.0"

# Internal workspace crates
stockpile-core = { path = "crates/core" }
stockpile-storage = { path = "crates/storage" }
stockpile-llm = { path = "crates/llm" }
stockpile-pipeline = { path = "crates/pipeline" }
stockpile-api = { path = "crates/api" }
stockpile-secure = { path = "crates/secure" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
# Abort on panic in release to prevent data leaks through unwinding (no heap dumps with partial state)
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
