[package]
name = "situation_room-situation-room"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "situation_room situation room — CLI that classifies a topic into a research plan and persists it."

[[bin]]
name = "situation-room"
path = "src/main.rs"

[dependencies]
situation_room-core = { workspace = true }
situation_room-storage = { workspace = true }
situation_room-llm = { workspace = true }
situation_room-pipeline = { workspace = true }
situation_room-secure = { workspace = true }
# Session 24: shared source-descriptor TOML loader (was duplicated
# verbatim in this binary and the desktop main). See ADR 0001 §"Why
# no separate `app` crate" — the deferred case ("if we later need …
# duplicating whatever wiring is shared at that point") is now
# active because the duplication arrived.
situation_room-apps-common = { workspace = true }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Errors and serialization
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# .env loading for development; the binary reads XAI_API_KEY from
# either the process environment or a .env file at the workspace root.
dotenvy = { workspace = true }
