[package]
name = "stockpile-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Anomaly detectors, aggregates, and scoring for Stockpile."

[lib]
path = "src/lib.rs"

[dependencies]
stockpile-core = { workspace = true }
stockpile-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
