[package]
name = "stockpile-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Frontend-facing API surface: Tauri commands, queries, subscriptions, and TypeScript type export."

[lib]
path = "src/lib.rs"

[dependencies]
stockpile-core = { workspace = true }
stockpile-storage = { workspace = true }
stockpile-llm = { workspace = true }
stockpile-pipeline = { workspace = true }
stockpile-secure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
ts-rs = { workspace = true }
