[package]
name = "situation_room-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Frontend-facing API surface: Tauri commands, queries, subscriptions, and TypeScript type export."

[lib]
path = "src/lib.rs"

[dependencies]
situation_room-core = { workspace = true }
situation_room-storage = { workspace = true }
situation_room-llm = { workspace = true }
situation_room-pipeline = { workspace = true }
situation_room-secure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
ts-rs = { workspace = true }
tauri = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
