[package]
name = "stockpile-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Stockpile schema: record types, envelope, controlled vocabularies. Zero workspace dependencies."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
ts-rs = { workspace = true }
