[package]
name = "stockpile-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider router, prompt loader, and structured-output extraction for Stockpile."

[lib]
path = "src/lib.rs"

[dependencies]
stockpile-core = { workspace = true }
stockpile-secure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
