[package]
name = "situation_room-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider router, prompt loader, and structured-output extraction for Situation_room."

[lib]
path = "src/lib.rs"

[dependencies]
situation_room-core = { workspace = true }
situation_room-secure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
