[package]
name = "situation_room-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pipeline orchestration for Aituation_room: ingest → normalize → extract → promote, plus the research planner."

[lib]
path = "src/lib.rs"

[dependencies]
situation_room-core = { workspace = true }
situation_room-storage = { workspace = true }
situation_room-llm = { workspace = true }
situation_room-secure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
# Session 54 Stage 1: per-target join_all inside author_for_nomination
# (and Stage 2: FuturesUnordered + Semaphore across nominations).
# `futures` rides the workspace-pinned 0.3 line.
futures = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
csv = { workspace = true }
scraper = { workspace = true }
jsonpath-rust = { workspace = true }
# Session 29 (Track C): pdf_table extraction. The crate has been a
# workspace dependency since Session 1 (USGS adapter scaffolding) but
# was unconsumed until the recipe-apply runtime gained its layout-
# heuristic PDF table reader. ADR 0007 amendment 5 documents the
# approach and the closed-enum invariant (we wired the fifth-of-five,
# we did not add a sixth mode).
pdf-extract = { workspace = true }
# Session 82 — `crates/pipeline/src/authoritative.rs` loads the
# authoritative-source registry from `config/vocab/authoritative_sources.toml`
# at composition-root time. ADR 0004 names the registry as configuration,
# not code; `toml` is the lightest dep that gives us a typed parser and
# is already a workspace dependency (apps_common consumes it for the
# source-descriptors loader).
toml = { workspace = true }
# Session 84 — content-derived dedup_key hashing in `promote.rs`. ADR
# 0021 amendment: swap the DoubleSipHash pair for SHA-256 truncated to
# 128 bits. Same on-disk shape (32 lowercase hex chars), stronger
# collision floor. The swap is a named ADR path, not a rewrite.
sha2 = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
