[package]
name = "stockpile-secure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-cutting security primitives for Stockpile: secret handling, URL validation, scrubbed logging, input bounds."

[lib]
path = "src/lib.rs"

[dependencies]
secrecy = { workspace = true }
zeroize = { workspace = true }
url = { workspace = true }
subtle = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
