[package]
name = "situation_room-secure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-cutting security primitives for Situation_room: secret handling, URL validation, scrubbed logging, input bounds."

[lib]
path = "src/lib.rs"

[dependencies]
secrecy = { workspace = true }
zeroize = { workspace = true }
url = { workspace = true }
subtle = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
# chrono — needed by the headers module's `Retry-After` parser
# (RFC 9110 §10.2.3 supports both delta-seconds and HTTP-date forms).
# Workspace already pins the version + features.
chrono = { workspace = true }
