[package]
name = "stockpile-sources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Data source adapters for Stockpile. One folder per source under adapters/."

[lib]
path = "src/lib.rs"

[dependencies]
stockpile-core = { workspace = true }
stockpile-secure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
