[package]
name = "situation_room-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DuckDB persistence layer for Situation_room records."

[lib]
path = "src/lib.rs"

[dependencies]
situation_room-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
duckdb = { workspace = true }
uuid = { workspace = true }
