[package]
name = "stockpile-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Stockpile desktop app — Tauri shim and composition root."

[[bin]]
name = "stockpile"
path = "src/main.rs"

[dependencies]
stockpile-core = { workspace = true }
stockpile-storage = { workspace = true }
stockpile-sources = { workspace = true }
stockpile-llm = { workspace = true }
stockpile-pipeline = { workspace = true }
stockpile-analytics = { workspace = true }
stockpile-api = { workspace = true }
stockpile-secure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }

# Tauri itself is added at Phase 4 when we wire up the actual app shell.
# For Phase 1 the binary is a no-op CLI that prints "Stockpile boots." so
# that the whole workspace compiles to a real executable.
