[package]
name = "stockpile-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Stockpile desktop app — Tauri shim and composition root."

[[bin]]
name = "stockpile"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
stockpile-core = { workspace = true }
stockpile-storage = { workspace = true }
stockpile-llm = { workspace = true }
stockpile-pipeline = { workspace = true }
stockpile-api = { workspace = true }
stockpile-secure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tauri = { workspace = true }
