[package]
name = "situation_room-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "situation_room desktop app — Tauri shim and composition root."

[[bin]]
name = "situation_room"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
situation_room-core = { workspace = true }
situation_room-storage = { workspace = true }
situation_room-llm = { workspace = true }
situation_room-pipeline = { workspace = true }
situation_room-api = { workspace = true }
situation_room-secure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tauri = { workspace = true }
